Return ResponseEntity instead of throwing ResponseStatusException